--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@vuepic/vue-datepicker": "^5.0.1",
     "aos": "^2.3.4",
     "axios": "^1.3.4",
-    "chart.js": "^4.2.1",
+    "chart.js": "^4.5.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "core-js": "^3.8.3",
     "firebase": "^10.12.2",
@@ -26,6 +26,7 @@
     "swiper": "^11.1.9",
     "v-calendar": "^3.1.2",
     "vue": "^3.5.22",
+    "vue-chartjs": "^5.3.3",
     "vue-router": "^4.0.13",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-select-component": "^0.12.3",
