--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pusher-js": "^8.4.0-rc2",
     "swiper": "^11.1.9",
     "v-calendar": "^3.1.2",
+    "vform": "^2.1.2",
     "vue": "^3.5.22",
     "vue-chartjs": "^5.3.3",
     "vue-router": "^4.0.13",
