--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "chart.js": "^4.5.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "core-js": "^3.8.3",
+    "filepond": "^4.32.10",
+    "filepond-plugin-file-validate-type": "^1.2.9",
+    "filepond-plugin-image-edit": "^1.6.3",
+    "filepond-plugin-image-preview": "^4.6.12",
     "firebase": "^10.12.2",
     "flowbite": "^1.6.3",
     "laravel-echo": "^1.16.1",
@@ -28,6 +32,7 @@
     "vform": "^2.1.2",
     "vue": "^3.5.22",
     "vue-chartjs": "^5.3.3",
+    "vue-filepond": "^7.0.4",
     "vue-router": "^4.0.13",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-select-component": "^0.12.3",
